Replace JEditorPane with JCEF browser for modern HTML rendering
Co-authored-by: teggr <837787+teggr@users.noreply.github.com>